# diabetes-mlops

./: .env.example  .env.production  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  artillery-test.yml  change-batch.json  cors-annotations.yaml  create-a-record.json  delete-cname.json  diabetes-api-test.html  diabetes-mlops-environment-2025-06-28_17-13-40.txt  dns-a-record.json  docker-compose.yml  implementation_guide.md  pyproject.toml  run_all_tests.ps1  setup.sh  test_data_pipeline.ps1  test_model_consistency.ps1
.github/workflows/: ci-cd.yml
app/: auth.py  deps.py  exceptions.py  logging_config.py  main.py  metrics.py  schemas.py  shap_utils.py
app/middleware/: encryption.py
config/: development.yaml  production.yaml
dags/: data_ingestion_dag.py  model_retraining_dag.py
database/migrations/: 001_create_predictions_table.sql  002_create_model_metrics_table.sql
governance/: model-registry.py
grafana/: diabetes-dashboard.json
grafana/provisioning/dashboards/: diabetes-dashboard.json
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml  servicemonitor.yaml
infra/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
ml/: consistency_test.py  dummy_model.py  model_loader.py  predict_batch.py  preprocess.py  train.py  tune.py
monitoring/: alert-rules.yaml  alerts.py  data_drift.py
prometheus/: prometheus.yml
tests/: test_alerts.py  test_app.py  test_drift.py  test_health.py  test_ml.py  test_predict_batch.py
