[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "diabetes-readmit"
version = "1.0.0"
description = "MLOps stack for diabetes 30-day readmission prediction"
authors = [
    {name = "Rok Cerne", email = "rokcernejr1@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
joblib = ">=1.3.0"
pandas = ">=2.1.0"
scikit-learn = ">=1.3.0"
lightgbm = ">=4.1.0"
xgboost = ">=2.0.0"
catboost = ">=1.2.0"
mlflow = ">=2.8.0"
optuna = ">=3.4.0"
pyyaml = ">=6.0"
python-multipart = ">=0.0.6"
requests = ">=2.31.0"
numpy = ">=1.24.0"
scipy = ">=1.10.0"
matplotlib = ">=3.7.0"
seaborn = ">=0.12.0"
plotly = ">=5.15.0"
boto3 = ">=1.29.0"
psycopg2-binary = ">=2.9.7"
sqlalchemy = ">=2.0.0"
python-json-logger = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
pytest-asyncio = ">=0.21.0"
ruff = ">=0.1.0"
black = ">=23.9.0"
mypy = ">=1.6.0"
pre-commit = ">=3.5.0"
httpx = ">=0.25.0"
pytest-mock = ">=3.11.0"
responses = ">=0.23.0"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "T201"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"
